# python-app-k8s-helm-deployment

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yaml
charts/python-chart/: values.yaml
charts/python-chart/templates/: _helpers.tpl
python-backend/: .dockerignore  Dockerfile  pyproject.toml
python-backend/app/: database.py
python-chart/: Chart.yaml  values.yaml
python-chart/templates/: NOTES.txt  _helpers.tpl  dashboard-configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
